--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+# 端口
+server.port = 8080
+# 引入其他配置文件（多环境配置）
+spring.profiles.active = dataSourceTest
+
+#jwt
+jwt.header= token
+jwt.secret= mySecret
+# token 过期时间/毫秒，6小时  1小时 = 3600000 毫秒
+jwt.expiration= 604800000
+# 在线用户key
+jwt.online= online-token
+# 验证码
+jwt.codeKey= code-key
