优化登录及增加日志

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ server.port = 8080
 # 引入其他配置文件（多环境配置）
 spring.profiles.active = dataSourceTest
 
+#在application.properties文件中引入日志配置文件，果你的名字是logback-spring.xml不用引入，会自动寻找
+logging.config=classpath:logback-spring.xml
+
+
 #jwt
 jwt.header= token
 jwt.secret= mySecret
