--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ jwt.secret= mySecret
 # token 过期时间/毫秒，6小时  1小时 = 3600000 毫秒
 jwt.expiration= 604800000
 # 在线用户key
-jwt.online= online-token
+jwt.online= online-token-
 # 验证码
-jwt.codeKey= code-key
+jwt.codeKey= code-key-
+# 令牌前缀
+jwt.start.with: Bearer
