数据库相关表

--- a/src/main/resources/application-dataSourceTest.properties
+++ b/src/main/resources/application-dataSourceTest.properties
@@ -13,7 +13,7 @@ spring.read.mysql.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.read.mysql.datasource.url = jdbc:mysql://59.202.38.56:5572/hzgwyc?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
 #spring.read.mysql.datasource.username = root
 #spring.read.mysql.datasource.password = Zjgwyc2019
-spring.read.mysql.datasource.url = jdbc:mysql://127.0.0.1:3306/zjgwyc0710?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
+spring.read.mysql.datasource.url = jdbc:mysql://127.0.0.1:3306/awadmin?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
 spring.read.mysql.datasource.username = root
 spring.read.mysql.datasource.password = wanglin1234
 
